fix nav header title alignment

--- a/app/styles/nav.css
+++ b/app/styles/nav.css
@@ -51,6 +51,10 @@
   justify-content: center;
 }
 
+.nav-header>.title {
+  text-align: center;
+}
+
 .nav-header * {
   margin: 0;
 }
